projects/compiler/test/typechecker/import/error_duplicate_func_name.4.out
Error at %FILE_NAME%:3:6
Duplicate name 'add'
  |  enum add {}
          ^
This name is also declared at (1:8)
  |  import add from "./_exports"
            ^
