projects/compiler/test/typechecker/import/error_duplicate_func_name.3.abra
import add from "./_exports"

type add {}
